# soap.coffee-lthms

./: .gitignore  Makefile  build.Dockerfile  cleopatra.toml  commands.mk  coq.mk  dependencies.mk  dependencies.opam  dev-dependencies.opam  docker.mk  dune  dune-project  literate-programming.mk  makefile  org.mk  package.json  server.opam  soupault.conf  soupault.mk  soupault.toml  style.css  theme.mk
hooks/: post-commit
plugins/: archives-index.lua  clean-up.lua  css.lua  external-urls.lua  external_links.lua  fix_urls.lua  footnote-postprocess.lua  meta.lua  move-tags.lua  notes.lua  running.lua  series-index.lua  series.lua  site-prefix.lua  tags-index.lua  urls-rewriting.lua
scripts/: capture.sh  css.sh  export-lp.el  export-org.el  gen-deps.sh  generate_history.sh  history.sh  init.el  katex.js  md-render.js  packages.el  pretty-echo.sh  render-equations.js  tangle-org.el  update-gitignore.sh
server/: dune  main.ml
site/: cleopatra.org  coq.org  haskell.org  index.html  index.md  index.org  meta.org  miscellaneous.org  posts.org  running.html
site/cleopatra/: Bootstrap.org  Soupault.org  Theme.org  coq.org  dependencies.org  index.org  literate-programming.org  org.org  soupault.org  theme.org
site/files/: RhinocerosSummary.md  lthms@soap.coffee.pub
site/news/: August2022.org  CFTSpatialShell.org  ColorlessThemes-0.2.org  MonthlyRetrospectives.org  November2022.org  September2022.org  index.html
templates/: history.html  index.xml  index_archives_full.html  index_archives_short.html  index_series.html  index_tags.html  main.html
(+111 files in other folders)
